# MyFirstCompiler

./: .gitignore  CMakeLists.txt  README.md
doc/: ast.md  class-spec.drawio  language-spec.md  parser-spec.drawio
src/lexer/: CMakeLists.txt  lexer.cpp  token.cpp  tokenacceptor.cpp  tokenfactory.cpp  tokenregistry.cpp
src/lib/: CMakeLists.txt  compiler.cpp  lexer.cpp  lexicalparser.cpp  ll1parser.cpp  parser.cpp  parserbase.cpp  rdparser.cpp  slr1parser.cpp  terminalfactory.cpp  token.cpp  tokenacceptor.cpp  tokenfactory.cpp  tokenregistry.cpp
src/parser/: CMakeLists.txt  ast.cpp  ll1parser.cpp  parser.cpp  parserbase.cpp  rdparser.cpp  slr1parser.cpp  symbol.cpp  terminalfactory.cpp
test/: CMakeLists.txt  test-ast.cpp  test-lexer.cpp  test-lexical.cpp  test-parser.cpp  test-types.cpp
